# tonic_extern_path

./: Cargo.toml
my_application/: Cargo.toml
my_application/src/: main.rs
uuid/src/: lib.rs
